--- a/week_1_basics_n_setup/2_docker_sql/docker-compose.yml
+++ b/week_1_basics_n_setup/2_docker_sql/docker-compose.yml
@@ -9,13 +9,19 @@ services:
       - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: root
-    volumes:
-      - "./data_pgadmin:/var/lib/pgadmin"
-    ports:
-      - "8080:80"
+    networks:
+      - "airflow"
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: admin@admin.com
+  #     PGADMIN_DEFAULT_PASSWORD: root
+  #   volumes:
+  #     - "./data_pgadmin:/var/lib/pgadmin"
+  #   ports:
+  #     - "8080:80"
 
+networks:
+  airflow:
+    external:
+      name: airflow_default
